test/cases/errors/load-module-error/error-loader.js
/** @type {import("../../../../types").LoaderDefinition} */
module.exports = function(source) {
	const callback = this.async();
	callback(new Error("err: abc"));
}
